# nostrbox

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile  nostrbox.example.yaml
crates/contextvm/: Cargo.toml
crates/contextvm/src/: email.rs  events.rs  lib.rs  operations.rs  types.rs
crates/contextvm/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: access.rs  actor.rs  config.rs  group.rs  identity.rs  lib.rs  ops.rs  registration.rs  role.rs  visibility.rs
crates/ext-contextvm/: Cargo.toml
crates/ext-contextvm/src/: lib.rs  transport.rs
crates/ext-email-login/: Cargo.toml
crates/ext-email-login/src/: email.rs  lib.rs  operations.rs
crates/ext-management/: Cargo.toml
crates/ext-management/src/: actors.rs  dashboard.rs  groups.rs  lib.rs  registration.rs  types.rs
crates/ext-management/tests/: integration.rs
crates/ext-webui/: Cargo.toml
crates/ext-webui/src/: lib.rs
crates/fips/: Cargo.toml
crates/fips/src/: config.rs  identity.rs  lib.rs  status.rs
crates/nostr/: Cargo.toml
crates/nostr/src/: builders.rs  event.rs  lib.rs  replaceable.rs  validation.rs
crates/nostr/tests/: integration.rs
crates/relay/: Cargo.toml
crates/relay/src/: admission.rs  broadcast.rs  config.rs  lib.rs  nip11.rs  nip42.rs  policy.rs  protocol.rs  query.rs  session.rs  setup.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  http.rs  ingestion.rs  init.rs  main.rs
crates/store/: Cargo.toml
crates/store/src/: actor_queries.rs  audit_queries.rs  dashboard.rs  db.rs  email_queries.rs  event_queries.rs  group_queries.rs  helpers.rs  lib.rs  pool.rs  queries.rs  reg_queries.rs  types.rs
crates/store/tests/: integration.rs
docker/: nostrbox.toml
docs/: FIPS-INTEGRATION.md  email-login-flow.html  fips.md
nixos/: deploy-nbox.sh  flake.nix  users.nix
nixos/machines/mac-mini/: configuration.nix  hardware-configuration.nix
nixos/modules/: blossom.nix  fips.nix  nostr-relay.nix  nostrbox.nix
nixos/profiles/: appliance.nix  dev.nix
web/: package.json
web/src/: App.css  App.tsx  index.css
web/src/components/: LeftNav.tsx  LoginModal.tsx  ProfilePanel.tsx  PubkeyCell.tsx  RelayPanel.tsx  TopBar.tsx
web/src/lib/: api.ts  contextvm.ts  nip49.ts  nip98.ts  nostr.ts  relay-context.tsx  settings.ts  signer.ts
web/src/views/: ActorsView.tsx  AgentsView.tsx  DashboardView.tsx  EmailAccountsView.tsx  EventsView.tsx  GroupsView.tsx  RegisterView.tsx  RegistrationsView.tsx  RelaysView.tsx
