[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/nostr",
    "crates/store",
    "crates/contextvm",
    "crates/relay",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web / HTTP
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Nostr
nostr-sdk = { version = "0.43", features = ["nip59"] }

# ContextVM
contextvm-sdk = { path = "../rust-contextvm-sdk" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto / random
rand = "0.9"
base64 = "0.22"

# Config
toml_parse = { package = "toml", version = "0.8" }

# Internal crates
nostrbox-core = { path = "crates/core" }
nostrbox-nostr = { path = "crates/nostr" }
nostrbox-store = { path = "crates/store" }
nostrbox-contextvm = { path = "crates/contextvm" }
nostrbox-relay = { path = "crates/relay" }
