[package]
name = "nostrbox-contextvm"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-store = { workspace = true }
tracing = { workspace = true }
# TODO: contextvm-sdk = { workspace = true }
