[package]
name = "nostrbox-contextvm"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-store = { workspace = true }
tracing = { workspace = true }
nostr-sdk = { workspace = true }
nostrbox-nostr = { workspace = true }
contextvm-sdk = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
