[package]
name = "nostrbox-ext-management"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-store = { workspace = true }
nostrbox-nostr = { workspace = true }
nostr-sdk = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
nostrbox-ext-email-login = { workspace = true }
