[package]
name = "nostrbox-relay"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-store = { workspace = true }
nostrbox-nostr = { workspace = true }
nostr-sdk = { workspace = true }
nostr-relay-builder = { workspace = true }
nostr-database = { workspace = true }
tracing = { workspace = true }
