[package]
name = "nostrbox-relay"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-store = { workspace = true }
nostrbox-nostr = { workspace = true }
nostr-sdk = { workspace = true }
tracing = { workspace = true }
