[package]
name = "nostrbox-server"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-nostr = { workspace = true }
nostrbox-store = { workspace = true }
nostrbox-contextvm = { workspace = true }
nostrbox-relay = { workspace = true }
