[package]
name = "nostrbox-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nostrbox-server"
path = "src/main.rs"

[[bin]]
name = "nostrbox-init"
path = "src/init.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml_parse = { workspace = true }
nostr-sdk = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-nostr = { workspace = true }
nostrbox-store = { workspace = true }
nostrbox-contextvm = { workspace = true }
nostrbox-relay = { workspace = true }
contextvm-sdk = { workspace = true }
