[package]
name = "nostrbox-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nostrbox-server"
path = "src/main.rs"

[[bin]]
name = "nostrbox-init"
path = "src/init.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nostr-sdk = { workspace = true }
nostrbox-core = { workspace = true }
nostrbox-nostr = { workspace = true }
nostrbox-store = { workspace = true }
nostrbox-relay = { workspace = true }
nostrbox-ext-management = { workspace = true }
nostrbox-ext-email-login = { workspace = true }
nostrbox-ext-contextvm = { workspace = true }
nostrbox-ext-webui = { workspace = true }
base64 = { workspace = true }
